packages/frontend/tests/type_errors/missing_field.nemo
struct F {
  x : i32
}

fn main() -> F {
  F { }
}
